overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,7 @@ a:active{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    overflow-x: hidden;
 }
 
 .video{
@@ -214,6 +215,8 @@ a:active{
     -webkit-transform: translateX(-12.5%);
         -ms-transform: translateX(-12.5%);
             transform: translateX(-12.5%);
+    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /***** SLIDES *****/
